<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">bmi_calculator</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_we_have_sent_an">We have sent an OTP to your registered email</string>
<string name="lbl_height">HEIGHT</string>
<string name="msg_less_than_18_5">Less than 18.5              Underweight


18.5 to 24.9                                 Healthy


25 to 29.9                            Overweight


30 or above                                   Obese</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
<string name="lbl_email_address">Email Address:</string>
<string name="lbl_145cm">145cm</string>
<string name="lbl_age">AGE</string>
<string name="lbl_obese2">                               Obese</string>
<string name="lbl_recommendations">RECOMMENDATIONS</string>
<string name="lbl_25">25</string>
<string name="lbl_reset_password">Reset Password</string>
<string name="lbl_145">145</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="lbl_female">FEMALE</string>
<string name="lbl_25_to_29_9">25 to 29.9</string>
<string name="lbl_bmi_calculator">BMI CALCULATOR</string>
<string name="lbl_about_us">About Us</string>
<string name="msg_enter_a_usernam">Enter a username</string>
<string name="lbl_lesny_io">Lesny.io</string>
<string name="lbl_save_results">Save Results</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_bmi_results">BMI RESULTS</string>
<string name="lbl_get_started">Get Started</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_less_than_18_5">Less than 18.5</string>
<string name="lbl_sign_up2">Sign Up</string>
<string name="lbl_male">MALE</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_calculate_bmi">Calculate BMI</string>
<string name="msg_we_re_going_to">We\u2019re going to send  an OTP to your registered email</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_username">Username:</string>
<string name="lbl">!</string>
<string name="lbl_yoga">Yoga</string>
<string name="msg_let_s_help_you2">Let\u2019s help you meet your goal</string>
<string name="lbl_running">Running</string>
<string name="lbl_good_morning">GOOD MORNING</string>
<string name="lbl_33_3">33.3</string>
<string name="lbl_you_have">You have </string>
<string name="lbl_walking">Walking</string>
<string name="lbl_sign_out">Sign Out</string>
<string name="lbl_18_5_to_24_9">18.5 to 24.9          </string>
<string name="msg_you_have_obese">You have Obese body weight!</string>
<string name="lbl_weight">WEIGHT</string>
<string name="lbl_summary">SUMMARY</string>
<string name="lbl_body_weight"> body weight</string>
<string name="lbl_details">Details</string>
<string name="msg_calculate_your">Calculate your BMI</string>
<string name="lbl_70">70</string>
<string name="lbl_your_bmi">Your BMI</string>
<string name="msg_info_bmi_codesm">info@bmi.codesmith</string>
<string name="lbl_obese">Obese</string>
<string name="lbl_send_otp">Send OTP</string>
<string name="lbl_sign_in2">Sign in</string>
<string name="lbl_healthy">                       Healthy


</string>
<string name="lbl_welcome_back">Welcome Back!!</string>
<string name="msg_this_app_can_yo">This app can you calculate your body mass index (BMI). Your BMI can help you determine if you are at a healthy weight, or if you need to make changes to your diet or exercise habits.</string>
<string name="msg_welcome_onboard">Welcome Onboard!!</string>
<string name="lbl_underweight">              Underweight


</string>
<string name="lbl_overweight">                            Overweight


</string>
<string name="lbl_rate_us">Rate Us</string>
<string name="lbl_cm">cm</string>
<string name="msg_let_s_help_you">Let\u2019s help you get better!!</string>
<string name="lbl_30_or_above">30 or above    </string>
<string name="msg_let_s_get_you_b">Let\u2019s get you back in</string>
<string name="msg_enter_email_add">Enter email address</string>
<string name="lbl_enter_password">Enter password</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_enter_a_valid_us">Enter a valid username</string>
</resources>
