<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signInVM" type="com.semilooresapplication.app.modules.signin.data.viewmodel.SignInVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcomeBack"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_117pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtWelcomeBack}"
            style="@style/txtPoppinssemibold20" tools:text="@string/lbl_welcome_back"/>
        <ImageView android:id="@+id/imageUndraweveryday"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_226pxh"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="@dimen/_310pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_undrawmedicine"
            tools:ignore="ContentDescription" tools:src="@drawable/img_undrawmedicine"/>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/msg_enter_email_add"
            android:id="@+id/textInputLayRectangleTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent"
            android:textColorHint="@color/black_900" style="@style/txtSolidRounded">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end" android:id="@+id/etRectangleTwo"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={signInVM.signInModel.etRectangleTwoValue}"
                android:textColor="@color/black_900" android:textSize="@dimen/_14pxh"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/lbl_enter_password"
            android:id="@+id/textInputLayRectangleTwoOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:textColorHint="@color/black_900" style="@style/txtSolidRounded">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end"
                android:id="@+id/etRectangleTwoOne"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={signInVM.signInModel.etRectangleTwoOneValue}"
                android:textColor="@color/black_900" android:textSize="@dimen/_14pxh"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotpassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signInVM.signInModel.txtForgotpassword}"
            style="@style/txtPoppinssemibold18" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignIn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_sign_in2"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_in2"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowconfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_17pxv"
            android:layout_marginEnd="@dimen/_42pxh"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtConfirmation"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.76" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtConfirmation}"
                style="@style/txtPoppinssemibold16" tools:text="@string/msg_don_t_have_an_a"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignUp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.24" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{signInVM.signInModel.txtSignUp}"
                style="@style/txtPoppinssemibold16_1" tools:text="@string/lbl_sign_up2"/>
        </LinearLayout>
    </LinearLayout>
</layout>
