<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.semilooresapplication.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <FrameLayout android:id="@+id/frameSignup"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_200">
        <LinearLayout android:id="@+id/linearColumnwelcomeonboard"
            android:layout_gravity="bottom|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtWelcomeOnboard"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtWelcomeOnboard}"
                style="@style/txtPoppinssemibold20" tools:text="@string/msg_welcome_onboard"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLetshelpyou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{signUpVM.signUpModel.txtLetshelpyou}"
                style="@style/txtPoppinssemibold15" tools:text="@string/msg_let_s_help_you2"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/msg_enter_a_usernam"
                android:id="@+id/textInputLayRectangleTwo"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_67pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRounded">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etRectangleTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={signUpVM.signUpModel.etRectangleTwoValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_14pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:background="@drawable/rectangle_bg_white_a700_radius_24"
                android:id="@+id/viewRectangleTwoOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginTop="@dimen/_34pxv" android:layout_width="@dimen/_312pxh"/>
            <View
                android:background="@drawable/rectangle_bg_white_a700_radius_24"
                android:id="@+id/viewRectangleTwoTwo"
                android:layout_gravity="start"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginTop="@dimen/_34pxv" android:layout_width="@dimen/_312pxh"/>
            <View
                android:background="@drawable/rectangle_bg_white_a700_radius_24"
                android:id="@+id/viewRectangleTwoThree"
                android:layout_gravity="start"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginTop="@dimen/_34pxv" android:layout_width="@dimen/_312pxh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_97pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowconfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.8"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtConfirmation}"
                    style="@style/txtPoppinssemibold16" tools:text="@string/msg_already_have_an"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignIn"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_weight="0.2"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtSignIn}"
                    style="@style/txtPoppinssemibold16_1" tools:text="@string/lbl_sign_in"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
