<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="detailsVM" type="com.semilooresapplication.app.modules.details.data.viewmodel.DetailsVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearDetails"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <TextView android:ellipsize="end" android:id="@+id/txtSUMMARY"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{detailsVM.detailsModel.txtSUMMARY}"
            style="@style/txtPoppinsbold25" tools:text="@string/lbl_summary"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowyourbmi"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_3">
            <TextView android:ellipsize="end"
                android:id="@+id/txtYourBMI"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_45pxv"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_weight="0.36" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{detailsVM.detailsModel.txtYourBMI}"
                style="@style/txtPoppinssemibold20_1" tools:text="@string/lbl_your_bmi"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtThreeHundredThirtyThree"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_27pxv"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_weight="0.37" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{detailsVM.detailsModel.txtThreeHundredThirtyThree}"
                style="@style/txtPoppinsregular45" tools:text="@string/lbl_33_3"/>
            <TextView android:ellipsize="end" android:id="@+id/txtObese"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_46pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_53pxv"
                android:layout_weight="0.27" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{detailsVM.detailsModel.txtObese}"
                style="@style/txtPoppinssemibold20_2" tools:text="@string/lbl_obese"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStackdescription"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_303pxv"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="@dimen/_302pxh" style="@style/groupStylecornerRadius_3">
            <TextView android:gravity="top|start"
                android:id="@+id/txtDescription"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent"
                android:text="@{detailsVM.detailsModel.txtDescription}"
                style="@style/txtPoppinsbold16" tools:text="@string/msg_less_than_18_5"/>
            <View android:background="@color/black_900_7f"
                android:id="@+id/lineLineThree"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_5pxv"
                android:layout_marginBottom="@dimen/_79pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_79pxv" android:layout_width="@dimen/_269pxh"/>
            <View android:background="@color/black_900_7f"
                android:id="@+id/lineLineFour"
                android:layout_gravity="center"
                android:layout_height="@dimen/_5pxv"
                android:layout_marginBottom="@dimen/_40pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_40pxv" android:layout_width="@dimen/_269pxh"/>
            <View android:background="@color/black_900_7f"
                android:id="@+id/lineLineSix"
                android:layout_gravity="bottom|center"
                android:layout_height="@dimen/_5pxv"
                android:layout_marginBottom="@dimen/_71pxv"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_71pxv" android:layout_width="@dimen/_269pxh"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSaveResults"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_save_results"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_save_results"/>
        <ImageButton
            android:background="@drawable/rectangle_bg_gray_200_16_radius_32"
            android:id="@+id/btnGroupSeventy"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_64pxh"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="@dimen/_64pxh"
            android:paddingHorizontal="@dimen/_10pxh"
            android:paddingVertical="@dimen/_10pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_group70" tools:ignore="ContentDescription"/>
    </LinearLayout>
</layout>
