<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.semilooresapplication.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:id="@+id/linearForgotpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_27pxh"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="@dimen/_26pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLetsgetyoub"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_123pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtLetsgetyoub}"
            style="@style/txtPoppinssemibold20" tools:text="@string/msg_let_s_get_you_b"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_radius_24"
            android:id="@+id/viewRectangleTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_34pxv" android:layout_width="@dimen/_312pxh"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgotPasswordVM.forgotPasswordModel.txtLanguage}"
            style="@style/txtPoppinssemibold12" tools:text="@string/msg_we_re_going_to"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSendOtp"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_62pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_305pxv"
            android:layout_width="@dimen/_282pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_send_otp"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_send_otp"/>
    </LinearLayout>
</layout>
