<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="enterOtpVM" type="com.semilooresapplication.app.modules.enterotp.data.viewmodel.EnterOtpVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearEnterOTP"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLetsgetyoub"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_161pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{enterOtpVM.enterOtpModel.txtLetsgetyoub}"
            style="@style/txtPoppinssemibold20" tools:text="@string/msg_let_s_get_you_b"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_radius_24"
            android:id="@+id/viewRectangleTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_34pxv" android:layout_width="@dimen/_312pxh"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtWehavesentan"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{enterOtpVM.enterOtpModel.txtWehavesentan}"
            style="@style/txtPoppinssemibold14" tools:text="@string/msg_we_have_sent_an"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_radius_24"
            android:id="@+id/viewRectangleTwoOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_52pxv" android:layout_width="@dimen/_312pxh"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_radius_24"
            android:id="@+id/viewRectangleTwoTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_48pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_46pxv" android:layout_width="@dimen/_312pxh"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnResetPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_62pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_155pxv"
            android:layout_width="@dimen/_282pxh"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_reset_password"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_reset_password"/>
    </LinearLayout>
</layout>
